<resources>
    <string name="app_name">UpVideo</string>
    <string name="app_start">开始录像</string>
    <string name="app_list">预览/编辑</string>
    <string name="app_up">开始上传</string>
    <string name="app_sup">继续</string>
    <string name="app_video_end">录完后</string>
    <string name="app_click_video">点击开始录像</string>
    <string name="app_video_f">分段模式</string>
    <string name="app_author">Pikachu</string>
    <string name="app_nav_item1">历史上传</string>
    <string name="app_nav_item2">地图浏览</string>
    <string name="app_nav_item3">设置/关于</string>
    <string name="app_nav_item4">退出</string>
    <string name="app_todo">TODO</string>

    <string-array name="app_fs">
        <item> 不分段 </item>
        <item> 手动分段 </item>
        <item> 按距离分段（米）</item>
        <item> 按时间分段（分）</item>
    </string-array>
    <string-array name="app_pops">
        <item> 4:3 </item>
        <item> 16:9  </item>
    </string-array>
    <string-array name="app_pxs">
        <item> 720P 30FPS </item>
        <item> 480P 30FPS </item>
        <item> 1080P 30FPS </item>
    </string-array>

    <string name="app_fragment_null">还没有创建任何项目哦！</string>
    <string name="app_project_delete">删除项目</string>
    <string name="app_project_modify">修改名称</string>
    <string name="app_project_info">项目详情</string>
    <string name="app_add_project">添加项目</string>
    <string name="app_project_add">添加</string>
    <string name="app_project_cancel">取消</string>
    <string name="app_add_project_hin">请输入项目名称，可包含中文</string>


    <string name="app_son_add_project">添加节点</string>
    <string name="app_son_add_project_msg">用于在地图上显示标记</string>
    <string name="app_son_add_project_hin">请输入节点名</string>
    <string name="app_son_add_project_hin1">请输入节点备注,可空</string>

    <string name="app_son_add_video">添加视频</string>


    <string name="app_video_px">视频清晰度</string>
    <string name="app_video_prop">视频比例</string>
    <string name="app_fd_m">输入间隔多远分段一次（单位米）</string>
    <string name="app_fd_t">输入间隔多少时间分段一次（单位分钟）</string>
    <string name="app_project_noup">未同步</string>
    <string name="app_project_wc">已同步</string>
    <string name="app_project_sv">服务端</string>
    <string name="app_time">00:00</string>
    <string name="app_project_start">起点</string>
    <string name="app_project_end">终点</string>
    <string name="app_son_project_hr">历史视频列表</string>
    <string name="app_task_stop">暂停</string>
    <string name="app_task_start">开始</string>
    <string name="app_task_no_project">该项目没有拍摄任何视频  无法进行同步</string>

</resources>