<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <EditText
        android:id="@+id/ui_ed_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/permission_dp_10"
        android:hint="@string/app_add_project_hin"
        android:lines="1"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textSize="@dimen/permission_sp_14"
        android:maxLength="80"/>

    <TextView
        style="@style/text1"
        android:text="@string/app_video_f"
        android:textSize="14sp"
        android:layout_marginTop="20dp"/>
    <Spinner
        android:id="@+id/add_spinner1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/permission_dp_40"
        android:entries="@array/app_fs"
        android:layout_marginStart="@dimen/permission_dp_10"
        />

    <EditText
        android:id="@+id/ui_ed_edit2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="14dp"
        android:hint="@string/app_fd_m"
        android:inputType="number"
        android:lines="1"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:visibility="gone"
        android:maxLength="7"/>


    <TextView
        style="@style/text1"
        android:text="@string/app_video_prop"
        android:textSize="14sp"
        android:layout_marginTop="14dp"/>
    <Spinner
        android:id="@+id/add_spinner2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/permission_dp_40"
        android:entries="@array/app_pops"
        android:layout_marginStart="@dimen/permission_dp_10"/>

    <TextView
        style="@style/text1"
        android:text="@string/app_video_px"
        android:textSize="14sp"
        android:layout_marginTop="14dp"/>
    <Spinner
        android:id="@+id/add_spinner3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/permission_dp_40"
        android:entries="@array/app_pxs"
        android:layout_marginStart="@dimen/permission_dp_10"/>






</LinearLayout>
