<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="14dp"
    android:orientation="vertical"
    android:background="@drawable/dialog_bg">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <ImageView
            android:src="@drawable/ic_folder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            style="@style/text1"
            android:layout_marginStart="@dimen/permission_dp_10" />


    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/app_project_modify"
        android:layout_marginTop="@dimen/permission_dp_20"
        android:textSize="@dimen/permission_sp_14" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/app_project_info"
        android:layout_marginTop="6dp"
        android:textSize="@dimen/permission_sp_14" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/app_project_delete"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="@dimen/permission_dp_10"
        android:textSize="@dimen/permission_sp_14"
        android:textColor="@color/red"/>
</LinearLayout>